create repository selection dropdown

--- a/src/main/resources/css/style.css
+++ b/src/main/resources/css/style.css
@@ -18,3 +18,18 @@ and open the template in the editor.
     -fx-border-color: blue;
     
 }
+.border-green{
+    -fx-border-color: green;    
+}
+
+.border-red{
+    -fx-border-color: red;
+}
+
+.border-black{
+    -fx-border-color: black;
+}
+
+.cur-point:hover{
+    -fx-cursor: hand;
+}
