--- a/src/main/resources/compiled-css/style.css
+++ b/src/main/resources/compiled-css/style.css
@@ -22,4 +22,204 @@
   -fx-cursor: hand;
 }
 
+.p-1 {
+  -fx-padding: 5px;
+}
+
+.py-1 {
+  -fx-padding: 5px 0 5px 0;
+}
+
+.px-1 {
+  -fx-padding: 0 5px 0 5px;
+}
+
+.pt-1 {
+  -fx-padding: 5px 0 0 0;
+}
+
+.pb-1 {
+  -fx-padding: 0 0 5px 0;
+}
+
+.m-1 {
+  -fx-margin: 5px;
+}
+
+.my-1 {
+  -fx-margin: 5px 0 5px 0;
+}
+
+.mx-1 {
+  -fx-margin: 0 5px 0 5px;
+}
+
+.mt-1 {
+  -fx-margin: 5px 0 0 0;
+}
+
+.mb-1 {
+  -fx-margin: 0 0 5px 0;
+}
+
+.p-2 {
+  -fx-padding: 10px;
+}
+
+.py-2 {
+  -fx-padding: 10px 0 10px 0;
+}
+
+.px-2 {
+  -fx-padding: 0 10px 0 10px;
+}
+
+.pt-2 {
+  -fx-padding: 10px 0 0 0;
+}
+
+.pb-2 {
+  -fx-padding: 0 0 10px 0;
+}
+
+.m-2 {
+  -fx-margin: 10px;
+}
+
+.my-2 {
+  -fx-margin: 10px 0 10px 0;
+}
+
+.mx-2 {
+  -fx-margin: 0 10px 0 10px;
+}
+
+.mt-2 {
+  -fx-margin: 10px 0 0 0;
+}
+
+.mb-2 {
+  -fx-margin: 0 0 10px 0;
+}
+
+.p-3 {
+  -fx-padding: 15px;
+}
+
+.py-3 {
+  -fx-padding: 15px 0 15px 0;
+}
+
+.px-3 {
+  -fx-padding: 0 15px 0 15px;
+}
+
+.pt-3 {
+  -fx-padding: 15px 0 0 0;
+}
+
+.pb-3 {
+  -fx-padding: 0 0 15px 0;
+}
+
+.m-3 {
+  -fx-margin: 15px;
+}
+
+.my-3 {
+  -fx-margin: 15px 0 15px 0;
+}
+
+.mx-3 {
+  -fx-margin: 0 15px 0 15px;
+}
+
+.mt-3 {
+  -fx-margin: 15px 0 0 0;
+}
+
+.mb-3 {
+  -fx-margin: 0 0 15px 0;
+}
+
+.p-4 {
+  -fx-padding: 20px;
+}
+
+.py-4 {
+  -fx-padding: 20px 0 20px 0;
+}
+
+.px-4 {
+  -fx-padding: 0 20px 0 20px;
+}
+
+.pt-4 {
+  -fx-padding: 20px 0 0 0;
+}
+
+.pb-4 {
+  -fx-padding: 0 0 20px 0;
+}
+
+.m-4 {
+  -fx-margin: 20px;
+}
+
+.my-4 {
+  -fx-margin: 20px 0 20px 0;
+}
+
+.mx-4 {
+  -fx-margin: 0 20px 0 20px;
+}
+
+.mt-4 {
+  -fx-margin: 20px 0 0 0;
+}
+
+.mb-4 {
+  -fx-margin: 0 0 20px 0;
+}
+
+.p-5 {
+  -fx-padding: 25px;
+}
+
+.py-5 {
+  -fx-padding: 25px 0 25px 0;
+}
+
+.px-5 {
+  -fx-padding: 0 25px 0 25px;
+}
+
+.pt-5 {
+  -fx-padding: 25px 0 0 0;
+}
+
+.pb-5 {
+  -fx-padding: 0 0 25px 0;
+}
+
+.m-5 {
+  -fx-margin: 25px;
+}
+
+.my-5 {
+  -fx-margin: 25px 0 25px 0;
+}
+
+.mx-5 {
+  -fx-margin: 0 25px 0 25px;
+}
+
+.mt-5 {
+  -fx-margin: 25px 0 0 0;
+}
+
+.mb-5 {
+  -fx-margin: 0 0 25px 0;
+}
+
 /*# sourceMappingURL=style.css.map */
