--- a/src/main/resources/sass/style.scss
+++ b/src/main/resources/sass/style.scss
@@ -3,8 +3,7 @@
 }
 
 .border{
-    -fx-border-color: blue;
-    
+    -fx-border-color: blue;    
 }
 .border-green{
     -fx-border-color: green;    
@@ -20,4 +19,42 @@
 
 .cur-point:hover{
     -fx-cursor: hand;
+}
+
+$increment:5;
+
+@for $i from 1 through 5 {
+    .p-#{$i}{
+        -fx-padding: #{$i*$increment}px;
+    }
+    .py-#{$i}{
+        -fx-padding: #{$i*$increment}px 0 #{$i*$increment}px 0;
+    }
+    
+    .px-#{$i}{
+        -fx-padding:0 #{$i*$increment}px 0 #{$i*$increment}px;
+    }
+    .pt-#{$i}{
+        -fx-padding:#{$i*$increment}px 0 0 0;
+    }
+    .pb-#{$i}{
+        -fx-padding:0 0 #{$i*$increment}px 0;
+    }
+    .m-#{$i}{
+        -fx-margin: #{$i*$increment}px;
+    }
+    .my-#{$i}{
+        -fx-margin: #{$i*$increment}px 0 #{$i*$increment}px 0;
+    }
+    
+    .mx-#{$i}{
+        -fx-margin:0 #{$i*$increment}px 0 #{$i*$increment}px;
+    }
+    
+    .mt-#{$i}{
+        -fx-margin:#{$i*$increment}px 0 0 0;
+    }
+    .mb-#{$i}{
+        -fx-margin:0 0 #{$i*$increment}px 0;
+    }
 }
