--- a/src/main/resources/compiled-css/style.css
+++ b/src/main/resources/compiled-css/style.css
@@ -42,6 +42,10 @@
   -fx-padding: 0 0 5px 0;
 }
 
+.pl-1 {
+  -fx-padding: 0 0 0 5px;
+}
+
 .m-1 {
   -fx-margin: 5px;
 }
@@ -80,6 +84,10 @@
 
 .pb-2 {
   -fx-padding: 0 0 10px 0;
+}
+
+.pl-2 {
+  -fx-padding: 0 0 0 10px;
 }
 
 .m-2 {
@@ -122,6 +130,10 @@
   -fx-padding: 0 0 15px 0;
 }
 
+.pl-3 {
+  -fx-padding: 0 0 0 15px;
+}
+
 .m-3 {
   -fx-margin: 15px;
 }
@@ -162,6 +174,10 @@
   -fx-padding: 0 0 20px 0;
 }
 
+.pl-4 {
+  -fx-padding: 0 0 0 20px;
+}
+
 .m-4 {
   -fx-margin: 20px;
 }
@@ -200,6 +216,10 @@
 
 .pb-5 {
   -fx-padding: 0 0 25px 0;
+}
+
+.pl-5 {
+  -fx-padding: 0 0 0 25px;
 }
 
 .m-5 {
