--- a/src/main/resources/compiled-css/style.css
+++ b/src/main/resources/compiled-css/style.css
@@ -46,6 +46,10 @@
   -fx-padding: 0 0 0 5px;
 }
 
+.pr-1 {
+  -fx-padding: 0 5px 0 0;
+}
+
 .m-1 {
   -fx-margin: 5px;
 }
@@ -88,6 +92,10 @@
 
 .pl-2 {
   -fx-padding: 0 0 0 10px;
+}
+
+.pr-2 {
+  -fx-padding: 0 10px 0 0;
 }
 
 .m-2 {
@@ -134,6 +142,10 @@
   -fx-padding: 0 0 0 15px;
 }
 
+.pr-3 {
+  -fx-padding: 0 15px 0 0;
+}
+
 .m-3 {
   -fx-margin: 15px;
 }
@@ -178,6 +190,10 @@
   -fx-padding: 0 0 0 20px;
 }
 
+.pr-4 {
+  -fx-padding: 0 20px 0 0;
+}
+
 .m-4 {
   -fx-margin: 20px;
 }
@@ -220,6 +236,10 @@
 
 .pl-5 {
   -fx-padding: 0 0 0 25px;
+}
+
+.pr-5 {
+  -fx-padding: 0 25px 0 0;
 }
 
 .m-5 {
