create home page left panel

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -12,8 +12,15 @@ html {
     --font-color: #282828;   
     --hover: #e4e6e896;
     --bg-color:white;
+    --gs-normal: white;
+    --gs-primary: blue;
+    --gs-secondary: rgb(82, 82, 124);
+    --gs-info: rgb(8, 33, 66);
+    --gs-warning: rgb(167, 167, 67);
+    --gs-danger: red;
     --bg-second-color: rgb(220, 220, 221);
     --bg-third-color: rgb(192, 196, 192);
+    --bg-fourth-color: rgb(141, 160, 141);
     --active-color: #ffff;
     --white: #ffff;
     --search-bg: #ffff;
@@ -32,8 +39,15 @@ html {
   html[data-theme='dark'] {
     --font-color: #e4e6eb;
     --bg-color: #1E1E1E;
+    --gs-normal: black;
+    --gs-primary: rgb(81, 165, 144);
+    --gs-secondary: rgb(86, 86, 230);
+    --gs-info: rgb(28, 116, 138);
+    --gs-warning: rgb(165, 165, 109);
+    --gs-danger: rgb(170, 63, 63);
     --bg-second-color: #323233;
     --bg-third-color: #a7a8a7;
+    --bg-fourth-color: rgb(126, 117, 156);
     --active-color: #333333;
     --white: #181818;
     --svg-lite: #E5E6EB;
@@ -64,10 +78,18 @@ html {
   .bg-third-color{
     background-color: var(--bg-third-color);
   }
+
+  .bg-fourth-color{
+    background-color: var(--bg-fourth-color);
+  }
   
   body {
     background-color: var(--bg-color);
     height: 100vh;
+  }
+
+  #root{
+    height: 100%;
   }
 
   * {
@@ -83,3 +105,25 @@ html {
     cursor: pointer;
     opacity: 0.6;
   }
+
+  .hover-brighter:hover{
+    filter: brightness(150%);
+  }
+
+  // $insets: top, right, left, right;
+  // $gs-colors: var(--gs-normal),var(--gs-primary), var(--gs-primary),var(--gs-secondary),var(--gs-info),var(--gs-warning),var(--gs-danger);
+  // $gs_variants: gs-normal, gs-primary, gs-primary,gs-secondary,gs-info,gs-warning,gs-danger;
+
+  // $variantLenght : list.length($gs_variants);
+  // @for $variantIndex from 0 through $variantLenght  {
+    
+  //   .border-#{list.nth($gs_variants, $variantIndex)}{
+  //     border: list.nth($gs-colors, $variantIndex);
+  //   }
+
+  //   @for $inIndex from 0 through list.length($insets){
+  //     .border-#{list.nth($insets, $inIndex)}-#{list.nth($gs_variants, $variantIndex)}{
+  //       border-#{list.nth($insets, $inIndex)}: 1px solid list.nth($gs-colors,$variantIndex);
+  //     }
+  //   }    
+  // }
