handl select with control by props

--- a/frontend/src/components/repositorySelection/repoSelectionPanels/recentRepositoryPanel/recentRepoPanel.scss
+++ b/frontend/src/components/repositorySelection/repoSelectionPanels/recentRepositoryPanel/recentRepoPanel.scss
@@ -6,6 +6,9 @@
             border-width: 0 0 1px 0;
             border-style: solid;
             border-color: var(--bg-thrid-color);
+            &.selected{
+                background-color: var(--bg-fourth-color);
+            }
         }
     }
 }
