show file in explorer 2

--- a/frontend/src/components/repositorySelection/repoSelectionPanels/recentRepositoryPanel/recentRepoPanel.scss
+++ b/frontend/src/components/repositorySelection/repoSelectionPanels/recentRepositoryPanel/recentRepoPanel.scss
@@ -7,7 +7,7 @@
             border-style: solid;
             border-color: var(--bg-thrid-color);
             &.selected{
-                background-color: var(--bg-fourth-color);
+                background-color: var(--bg-select-color);
             }
         }
     }
