set width , height of branch panel

--- a/frontend/src/components/selectedRepository/SelectedRepository.scss
+++ b/frontend/src/components/selectedRepository/SelectedRepository.scss
@@ -1,6 +1,7 @@
 #SelectedRepository{
     #SelectedRepoLeft{
         width: 200px;
+        flex-shrink: 0;
         // & > .tabItem{
         //     &.active{
                 
