--- a/frontend/src/components/selectedRepository/SelectedRepository.scss
+++ b/frontend/src/components/selectedRepository/SelectedRepository.scss
@@ -11,14 +11,14 @@
     #selectedRepoRight{
         width: 100%;
         overflow: auto;
-        #branchPanel{
-            width: 75%;
-            overflow: auto;
-        }
-        #commit_property{
-            width: 25%;
-            overflow: hidden;
-        }
+        // #branchPanel{
+        //     width: 75%;
+        //     overflow: auto;
+        // }
+        // #commit_property{
+        //     width: 25%;
+        //     overflow: hidden;
+        // }
     }
     
 }
