--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -119,6 +119,11 @@ html {
     resize: none;
   }
 
+  .outline-none{
+    outline: none;
+    border: 0;
+  }
+
   // $insets: top, right, left, right;
   // $gs-colors: var(--gs-normal),var(--gs-primary), var(--gs-primary),var(--gs-secondary),var(--gs-info),var(--gs-warning),var(--gs-danger);
   // $gs_variants: gs-normal, gs-primary, gs-primary,gs-secondary,gs-info,gs-warning,gs-danger;
