show head identifier

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -69,6 +69,10 @@ html {
     font-family: 'Consolas';
   }
 
+  .font-color{
+    color: var(--font-color);
+  }
+  
   .bg-color{
     background-color: var(--bg-color);
   }
