enablie background color

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -182,3 +182,10 @@ html {
     // animation-direction: alternate;
 
   }
+
+.previous-background{
+  background:#FFCCCC;
+}
+.current-background{
+  background: #DBE6C2;;
+}
