--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -189,3 +189,10 @@ html {
 .current-background{
   background: #DBE6C2;;
 }
+.gs-overflow-x-auto{
+  overflow-x: auto;
+}
+
+.gs-overflow-y-auto{
+  overflow-y: auto;
+}
