implement checkout to commit

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -116,6 +116,9 @@ html {
   .cur-point{
     cursor: pointer;
   }
+  .cur-default{
+    cursor: default;
+  }
 
   .cur-resize{
     cursor: e-resize;
