--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -215,5 +215,7 @@ html {
 
 .hover-bg-secondary:hover{
   background: gray;
-  color: white !important;  
+  *{
+    color: white !important;      
+  }
 }
