--- a/frontend/src/components/selectedRepository/SelectedRepository.scss
+++ b/frontend/src/components/selectedRepository/SelectedRepository.scss
@@ -11,7 +11,7 @@
         width: 100%;
         overflow: auto;
         #branchPanel{
-            height: 410px;
+            height: 67vh;
             svg{
                 transform: scale(0.1);
             }
