implement resizing of right panel of graph

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -123,6 +123,10 @@ html {
     cursor: e-resize;
   }
 
+  .cur-resize-v{
+    cursor: n-resize;
+  }
+
   .hover:hover{
     cursor: default;
     opacity: 0.6;
