fix hover effect

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -127,7 +127,7 @@ html {
     cursor: n-resize;
   }
 
-  .hover:hover{
+  .hover:hover, .hover:hover *{
     cursor: default;
     //opacity: 0.6;
     color: #0bc59c;
