show conflict diffs

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -257,6 +257,12 @@ html {
     margin: 0 !important;
   }
 }
+
+.conflict-diff{
+  p {
+    margin: 0 !important;
+  }
+}
 .context-option{
   padding-top: 4px;
   padding-bottom: 4px;
