show header panel.

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -339,3 +339,6 @@ html {
 .bg-previous-change-deep{
   background-color: var(--bg-previous-change-deep);
 }
+.overflow-ellipsis{
+  text-overflow: ellipsis;
+}
