fix background color of modal

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -89,6 +89,10 @@ html {
     background-color: var(--bg-color);
   }
 
+  .modal-content{
+    background-color: var(--bg-color);
+  }
+
   .font-color{
     color: var(--font-color);
   }
