update diff coloring

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -36,7 +36,7 @@ html {
     --dropdown-background: #ffff;
     --colorBlue: #1CD0A8;
     --bg-current-change: #d6e7b1;
-    --bg-current-change-deep: #caed77;
+    --bg-current-change-deep: #bdd780;
     --bg-previous-change: #FFCCCC;
     --bg-previous-change-deep: #fda0a0;
     --bg-fade:#afadad;
