--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -10,7 +10,7 @@ html {
 
 html {
     --font-color: #282828;   
-    --hover: #0bc59c;
+    --hover: #56a696;
     --bg-color:rgb(241, 236, 236);
     --gs-normal: white;
     --gs-primary: blue;
@@ -59,7 +59,7 @@ html {
     --active-color: #333333;
     --white: #181818;
     --svg-lite: #E5E6EB;
-    --hover: #0bc59c;        
+    --hover: #56a696;        
     --search-bg: #181818;
     --svg-dark: #909090;
     --scrollbar-color: #636363;
@@ -154,7 +154,7 @@ html {
   .hover:hover, .hover:hover *{
     cursor: default;
     //opacity: 0.6;
-    color: #0bc59c;
+    color: var(--hover);
   }
 
   .hover-color:hover{
