--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -411,3 +411,16 @@ html {
   bottom:50px;
   z-index: 100;
 }
+
+.spinner {
+  animation: spin infinite 1s linear;
+}
+
+@keyframes spin {
+from {
+  transform: rotate(0deg);
+}
+to {
+  transform: rotate(360deg);
+}
+}
