--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -424,3 +424,16 @@ to {
   transform: rotate(360deg);
 }
 }
+
+.config-item{
+  padding: 1rem 0 1rem 0;
+  border-bottom: 1px solid var(--border-color);  
+}
+
+.config-header{
+  width: 100px;
+}
+
+.config-value{
+  width: calc(100% - 100px);
+}
