--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -444,17 +444,31 @@ to {
   width: calc(100% - 100px);
 }
 
-.commit-list-filter{
-  .css-1xc3v61-indicatorContainer{
-    padding-top: 0px;
-    padding-bottom: 0px;    
-  }
+.css-b62m3t-container{
+  max-width: 100%;
+  box-sizing: border-box;
   *{
-    border-radius: 0 !important;
+    border-radius: 0px !important;
+  }
+  .css-1xc3v61-indicatorContainer{
+    padding-top: 0px !important;
+    padding-bottom: 0px !important;    
   }
   .css-13cymwt-control{
-    min-height: 15px;
-    border-radius: 0px;
-  }  
+    min-height: 15px !important;
+    border-radius: 0px !important;
+  }
   
+  .css-t3ipsp-control{
+    height: 100%;
+    min-height: 15px !important;
+  }
+
+  .css-1hb7zxy-IndicatorsContainer{
+    max-height: 100%;
+  }
+
 }
+  
+  
+  
