--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -446,6 +446,7 @@ to {
 
 .css-b62m3t-container{
   max-width: 100%;
+  height: 100% !important;  
   box-sizing: border-box;
   *{
     border-radius: 0px !important;
@@ -469,6 +470,3 @@ to {
   }
 
 }
-  
-  
-  
