--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -445,11 +445,14 @@ to {
 }
 
 .css-b62m3t-container{
+  background: var(--bg-color) !important;
   max-width: 100%;
   height: 100% !important;  
-  box-sizing: border-box;
+  box-sizing: border-box;  
   *{
     border-radius: 0px !important;
+    // background-color: var(--bg-color);
+    // color: var(--font-color) !important;
   }
   .css-1xc3v61-indicatorContainer{
     padding-top: 0px !important;
@@ -458,11 +461,13 @@ to {
   .css-13cymwt-control{
     min-height: 15px !important;
     border-radius: 0px !important;
+    background-color: var(--bg-color);
   }
   
   .css-t3ipsp-control{
     height: 100%;
     min-height: 15px !important;
+    background-color: var(--bg-color);
   }
 
   .css-1hb7zxy-IndicatorsContainer{
