disable hover brighter.
use box shadow instead.

--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -168,7 +168,7 @@ html {
   }
 
   .hover-brighter:hover{
-    filter: brightness(105%);
+    //filter: brightness(105%);
   }
 
   .hover-shadow:hover{
