--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -48,7 +48,7 @@ html {
   
   html[data-theme='dark'] {
     --font-color: #e4e6eb;
-    --bg-color: #1E1E1E;
+    --bg-color: #1F1F1F;
     --bg-default-button:#76a198;
     --border-color:rgba(0,0,0,.2);
     --gs-normal: black;
@@ -58,7 +58,7 @@ html {
     --gs-warning: rgb(165, 165, 109);
     --gs-danger: rgb(170, 63, 63);
     --bg-second-color: #323233;
-    --bg-third-color: #a7a8a7;
+    --bg-third-color: #181818;
     --bg-fourth-color: rgb(126, 117, 156);
     --bg-select-color: rgb(130, 124, 212);
     --active-color: #333333;
