update font color in dark mode

--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -47,7 +47,7 @@ html {
   }  
   
   html[data-theme='dark'] {
-    --font-color: #e4e6eb;
+    --font-color: #CCCCCC;
     --bg-color: #1F1F1F;
     --bg-default-button:#76a198;
     --border-color:rgba(0,0,0,.2);
