update default button bg color for dark mode

--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -49,7 +49,7 @@ html {
   html[data-theme='dark'] {
     --font-color: #CCCCCC;
     --bg-color: #1F1F1F;
-    --bg-default-button:#76a198;
+    --bg-default-button:#1F1F1F;
     --border-color:rgba(0,0,0,.2);
     --gs-normal: black;
     --gs-primary: rgb(81, 165, 144);
