--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -1,3 +1,4 @@
+@use "sass:list";
 
 @font-face {
     font-family: 'Consolas';
@@ -81,6 +82,23 @@ html {
     --bg-fade:#513f3f;
     --bg-change-accepted:#b9d5f6;
   }
+
+  $valid-sides2: top, bottom, start, end;
+
+  @each $side in $valid-sides2 {
+    .border-#{$side} {
+      border-#{$side}-color: var(--border-color) !important;
+    }
+  }
+
+  // @each $size in $sizes {
+  //   .icon-#{$size} {
+  //     font-size: $size;
+  //     height: $size;
+  //     width: $size;
+  //   }
+  // }
+  
 
   p,span,div,i,h1,h2,h3,h4,h5,h6{
     color: var(--font-color);
