--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -107,6 +107,7 @@ html {
 
   .form-control, .form-control:focus{
     background-color: var(--bg-color);
+    color: var(--font-color);
   }
 
   .modal-content{
