update select color in dark mode

--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -61,7 +61,7 @@ html {
     --bg-second-color: #323233;
     --bg-third-color: #181818;
     --bg-fourth-color: rgb(126, 117, 156);
-    --bg-select-color: rgb(130, 124, 212);
+    --bg-select-color: #48484d;
     --active-color: #333333;
     --white: #181818;
     --highlight-color:rgb(92, 92, 243);
