update diff coloring in dark mode

--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -75,10 +75,10 @@ html {
     --switch-bg: #4c4b4b;    
     --wt-dropdown-background: #232323;
     --colorBlue: #1CD0A8;
-    --bg-current-change:#EBF1DD;
-    --bg-current-change-deep: #e2f4b8;
-    --bg-previous-change: #FFCCCC;
-    --bg-previous-change-deep: #fda0a0;
+    --bg-current-change:#383E2A;
+    --bg-current-change-deep: #4C5B2B;
+    --bg-previous-change: #4C1919;
+    --bg-previous-change-deep: #701414;
     --bg-fade:#513f3f;
     --bg-change-accepted:#b9d5f6;
   }
