update scrollbar color for dark theme

--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -70,7 +70,7 @@ html {
     --hover: #56a696;        
     --search-bg: #181818;
     --svg-dark: #909090;
-    --scrollbar-color: #636363;
+    --scrollbar-color: #563D7C;
     --switch-round: #1CD0A8;
     --red-color: #cc401f;
     --switch-bg: #4c4b4b;    
@@ -82,7 +82,7 @@ html {
     --bg-previous-change-deep: #701414;
     --bg-fade:#513f3f;
     --bg-change-accepted:#b9d5f6;
-    --scroll-bar-color:rgba(0,0,0,.2);
+    --scroll-bar-color:rgba(20, 19, 20, 0.722);
   }
 
   $valid-sides: top, bottom, start, end;
