--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -116,6 +116,9 @@ html {
 
   .modal-content{
     background-color: var(--bg-color);
+    & * {
+      background-color: inherit;
+    }
   }
 
   .font-color{
