update head text color on light mode

--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -50,7 +50,7 @@ html {
     --branch-line-color:black;
     --commit-circle-fill-color:cadetblue;
     --selected-commit-fill-color:blueviolet;
-    --head-text-color:green;
+    --head-text-color:rgb(198, 213, 198);
   }  
   
   html[data-theme='dark'] {
