update head text color in dark mode.

--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -92,7 +92,7 @@ html {
     --branch-line-color:rgb(3, 86, 27);
     --commit-circle-fill-color:#701414;
     --selected-commit-fill-color:#147053;
-    --head-text-color:rgb(201, 201, 203);
+    --head-text-color:#adacac;
   }
 
   $valid-sides: top, bottom, start, end;
